# Aganitha_TakehomeAssessment

./: README.md  cli.py  fetcher.py.txt  get_papers.py  pubmed.py  pyproject.toml  stdout
.github/workflows/: python-app.yml
pubmed_cli/: cli.py  filters.py  pubmed.py  utils,py
pubmed_fetcher/tests/: test-pubmed-fetcher.py
