# pyproject.toml
[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech authors"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
repository = "https://github.com/yourusername/pubmed-fetcher"
packages = [{include = "pubmed_fetcher"}]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.79"

[tool.poetry.scripts]
get-papers-list = "get_papers:get_papers_list"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]