# pyproject.toml
[tool.poetry]
name = "pubmed-fetcher-shreya-v1"
version = "0.1.1"
description = "Fetch PubMed papers with pharma/biotech authors"
authors = ["Shreya shreyasinghin24@gmail.com"]
readme = "README.md"
repository = "https://github.com/iam-shreya-singh/Aganitha_TakehomeAssessment"
packages = [{include = "pubmed-fetcher-shreya-v1"}]

[tool.poetry.dependencies]
python = "3.12.1"
biopython = "1.85"

[tool.poetry.scripts]
get-papers-list = "get_papers:get_papers_list"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]